# energy

./: .gitignore  Dockerfile  README.md  dates.py  main.py  pyproject.toml  test.py
.github/workflows/: pipeline.yml
airflow/dags/: energy_pipeline_dag.py
api/: main.py
api/models/: schemas.py
api/routers/: kenya.py  prices.py  reports.py
api/templates/: dashboard.html
app/ingestion/: collectapi_client.py  electricity_scraper.py  epra_scraper.py  ingestion_metadata.py
app/loaders/: curated_loader.py  raw_loader.py
app/services/: reporting.py
app/transformation/: transformer.py
app/validation/: rules.py  validator.py
config/: settings.py
